# billy-doc-core

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/: 01-core-philosophy.md  02-architecture.md  03-tooling-environment.md  04-style.md  05-data-validation.md  06-configuration.md  07-error-handling.md  08-logging.md  09-testing.md  10-security.md  11-performance.md  12-containers-ci.md  13-git-workflow.md  14-ai-assistant.md  15-pre-commit-checklist.md
.github/workflows/: deploy.yml
agents/: ai-assistant-rules.md  architecture.md  build-and-env.md  configuration-and-models.md  error-logging-and-debugging.md  imports-and-di.md  philosophy.md  pre-commit-checklist.md  security-and-performance.md  style.md  testing.md  workflow-and-ops.md
src/billy_doc_core/: __init__.py  const.py  main.py
src/billy_doc_core/api/v1/: documents.py
src/billy_doc_core/models/: models.py
src/billy_doc_core/services/: document_service.py
src/billy_doc_core/templates/: invoice.html  quotation.html  receipt.html
src/billy_doc_core/tests/: README.md  conftest.py  test_asset_handling.py  test_document_integration.py  test_performance.py
src/billy_doc_core/tests/thai_utils/: test_currency.py
src/billy_doc_core/thai_utils/: __init__.py  currency.py  date.py  validation.py
